<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil.PerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <!--PORTADA-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:src="@drawable/imagen_portada"
                android:scaleType="centerCrop"/>

            <!--IMAGEN DE PERFIL-->
            <ImageView
                android:id="@+id/p_image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="#354f60"
                android:layout_marginTop="130dp"
                android:layout_marginStart="15dp"
                android:scaleType="centerCrop"/>

            <!--EDITAR IMAGEN-->
            <ImageView
                android:id="@+id/ed_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="230dp"
                android:src="@drawable/editar_imagen_perfil"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/p_u_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/p_u_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/proveedor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p_proveedor_txt"
                    android:textStyle="bold"
                    android:textSize="17sp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0.5dp"
                    android:backgroundTint="#48C9B0"
                    android:layout_marginStart="5dp"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:id="@+id/p_proveedor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/p_proveedor"
                        android:textSize="17sp"
                        android:padding="10dp"
                        android:textStyle="bold"/>

                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>
            
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_verificar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/btn_verificar"/>
            
            <!--NOMBRE-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/p_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/p_nombres"
                    android:inputType="textPersonName|textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--APELLIDOS-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/p_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/p_apellidos"
                    android:inputType="textPersonName|textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--PROFESION-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/p_profession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/p_profesion"
                    android:inputType="textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--DOMICILIO-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/p_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/p_domicilio"
                    android:inputType="textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--EDAD-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/p_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/p_age"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--TELEFONO-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/p_telephonenumber"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/p_telefono"
                    android:textSize="18sp"
                    android:layout_gravity="center"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/edt_telefono"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/telefono"
                    android:layout_marginStart="15dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <Button
                android:id="@+id/btn_save"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Guardar"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                app:icon="@drawable/ic_save_info"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>