<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:lottie_fileName="dev.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:text="@string/desarrollador"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:text="@string/correoSoporte"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:text="@string/version"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/Ir_FB"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/facebook"/>

        <ImageView
            android:id="@+id/Ir_Instagram"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/instagram"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:id="@+id/Ir_youtube"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/youtube"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:id="@+id/Ir_twitter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/twitter"
            android:layout_marginStart="10dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/entendidoInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/entendidoInfo"/>

</androidx.appcompat.widget.LinearLayoutCompat>